--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     padding: 0;
     
 }
-body{
+header{
     background-color: cyan;
 }
 
@@ -14,6 +14,7 @@ h1{color:blue;}
     margin-top: 10px;
     list-style-type: none;
     padding-left: 0;
+    position: fixed;
  }  
  .nav li{
     display: inline-block;
@@ -22,6 +23,6 @@ h1{color:blue;}
     color: white;
     background-color: gray;
     padding:5px;
-    border-radius:2px;
+    border-radius:20px;
     text-decoration: none;
 }
