--- a/style.css
+++ b/style.css
@@ -15,7 +15,25 @@ h1{color:blue;}
     list-style-type: none;
     padding-left: 0;
     position: fixed;
+    
+   
  }  
+ .nav-mov{ position: fixed;
+    bottom: 20px;
+    list-style-type: none;
+    margin-top: 10px;
+    
+ }
+ .nav-mov a{
+    color: white;
+    background-color: gray;
+    padding:5px;
+    border-radius:20px;
+    text-decoration: none;
+}
+.nav-mov li{
+    display: inline-block;
+}
  .nav li{
     display: inline-block;
 }
