--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ header{
 }
 
 h1{color:blue;}
+.formu{
+    display: flex;
+}
 .nav{
     margin-top: 10px;
     list-style-type: none;
@@ -19,7 +22,7 @@ h1{color:blue;}
    
  }  
  .nav-mov{ position: fixed;
-    bottom: 20px;
+    bottom: 1+px;
     list-style-type: none;
     margin-top: 10px;
     
