--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ h1{color:blue;}
 .formu{
     display: flex;
 }
+h1{
+    font-size: 2rem;
+}
+p{
+    font-size: 1rem;
+}
 .nav{
     margin-top: 10px;
     list-style-type: none;
@@ -22,7 +28,7 @@ h1{color:blue;}
    
  }  
  .nav-mov{ position: fixed;
-    bottom: 1+px;
+    bottom: 1px;
     list-style-type: none;
     margin-top: 10px;
     
@@ -33,6 +39,7 @@ h1{color:blue;}
     padding:5px;
     border-radius:20px;
     text-decoration: none;
+    font-size: 1.5rem;
 }
 .nav-mov li{
     display: inline-block;
@@ -46,4 +53,5 @@ h1{color:blue;}
     padding:5px;
     border-radius:20px;
     text-decoration: none;
+    font-size: 1.5rem;
 }
