--- a/style.css
+++ b/style.css
@@ -5,11 +5,14 @@
     padding: 0;
     
 }
+body{
+background-color: aqua;
+}
 header{
     background-color: cyan;
 }
 
-h1{color:blue;}
+h1{color:black;}
 .formu{
     display: flex;
 }
